// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`attributeView renders 1st tab correctly 1`] = `
<WithTheme(TabbedPanel)
  defaultTab={0}
  tabLabels={
    Array [
      "Table",
      "Plot",
    ]
  }
  useSwipeable={false}
>
  <ArchiveTable
    attribute={Object {}}
  />
  <LoadableComponent
    attribute={Object {}}
  />
</WithTheme(TabbedPanel)>
`;

exports[`attributeView renders 2nd tab correctly 1`] = `
<WithTheme(TabbedPanel)
  defaultTab={1}
  tabLabels={
    Array [
      "Table",
      "Plot",
    ]
  }
  useSwipeable={false}
>
  <ArchiveTable
    attribute={Object {}}
  />
  <LoadableComponent
    attribute={Object {}}
  />
</WithTheme(TabbedPanel)>
`;
